# file-utils

./: Cargo.toml  README.md
src/: flatten.rs  lib.rs  main.rs  rename.rs  sort.rs  utils.rs
tests/: test.rs
